--- a/package.json
+++ b/package.json
@@ -11,28 +11,30 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.7",
-    "@tanstack/react-form": "^1.21.1",
+    "@tanstack/react-form": "^1.23.5",
     "@tanstack/react-query": "^5.76.2",
     "@tanstack/react-router": "^1.120.7",
     "@tanstack/react-router-devtools": "^1.120.7",
-    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "keycloak-js": "^26.2.0",
+    "ky": "^1.11.0",
     "lucide-react": "^0.511.0",
     "oidc-client-ts": "^3.2.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-hook-form": "^7.56.4",
     "react-oidc-context": "^3.3.0",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.7",
